--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
            <!-- Second side  -->
         <main class="second_side">
         <div class="right_side">
+            <div class="card_header">
+                    <div class="header">
+                        <div class="maykaz">
+                        <img src="./images/maykaz_logo.PNG" alt="maykaz logo">
+                        <p>maykaz_co...</p>
+                        </div> 
+                        <div class="nafeesah">
+                        <img src="./images/nafeesah_logo.PNG" alt="nafeesah logo">
+                        <p>nafeesah.h...</p>
+                        </div>
+                        <div class="hijab">
+                        <img src="./images/hijabi_logo.PNG" alt="hijabi logo">
+                        <p>djilbabi_on...</p>
+                        </div>
+                        <div class="chops">
+                        <img src="./images/smallchops_logo.PNG" alt="small chops logo">
+                        <p>chops_h...</p>
+                        </div> 
+                        <div class="nas_daily">
+                        <img src="./images/nasdaily_logo.PNG" alt="nas daily logo">
+                        <p>daily_n...</p>
+                        </div>
+                        <img src="" alt=""> 
+                    </div>
+            </div>
             <div class="card">
                 <section class="card_handle1">
                         <div class="card1_header">
@@ -159,8 +184,37 @@
         <div class="side3">
             <img src="./images/profile2_logo.PNG" alt="profile logo">
             <span><b>Wahab Zulikhah</b></span>
-            <a href="#">switch</a>
+            <a href="#">Switch</a>
         </div>
+        <div class="suggestion">
+            <span><p class="for_you">Suggestions For You</p></span>
+            <span><p class="see_all">See all</p></span>
+        </div>
+        <div class="profile1">
+            <img src="./images/aminat_icon.PNG" alt="profile logo">
+            <span><b>aninatolatunji</b></span>
+            <a href="#">follow</a>  
+        </div>
+            <p class="tijani">Followed by tijanibilikisu23</p>
+        <div class="profile2">
+            <img src="./images/noprofile_icon2.PNG" alt="profile logo">
+            <span><b>oyemmyfashion</b></span>
+            <a href="#">follow</a>
+        </div>
+            <p class="oyemmy">New to Instagram</p>
+        <div class="profile3">
+            <img src="./images/noprofile_icon2.PNG" alt="profile logo">
+            <span><b>salamirahmatmayowa</b></span>
+            <a href="#">follow</a> 
+        </div>
+            <p class="salami">Suggested for you</p>
+        <div class="profile4">
+            <img src="./images/engr_icon.PNG" alt="profile logo">
+            <span><b>engr_kaysmart</b></span>
+            <a href="#">follow</a> 
+        </div>
+            <p class="engr">Followed by fateemahelemoro + 5 more</p>
+
         <div class="down_part">
             <a href="#"><span>About.</span></a>
             <a href="#"><span>Help.</span></a>
