my homepage design updated

--- a/index.html
+++ b/index.html
@@ -51,18 +51,14 @@
                         <p>nafeesah.h...</p>
                         </div>
                         <div class="hijab">
-                        <img src="./images/hijabi_logo.PNG" alt="hijabi logo">
+                        <img src="./images/hijabi.PNG" alt="hijabi logo">
                         <p>djilbabi_on...</p>
                         </div>
                         <div class="chops">
-                        <img src="./images/smallchops_logo.PNG" alt="small chops logo">
-                        <p>chops_h...</p>
+                        <img src="./images/maazstites.PNG" alt="maazstiches logo">
+                        <p>maazstic...</p>
                         </div> 
-                        <div class="nas_daily">
-                        <img src="./images/nasdaily_logo.PNG" alt="nas daily logo">
-                        <p>daily_n...</p>
-                        </div>
-                        <img src="" alt=""> 
+                
                     </div>
             </div>
             <div class="card">
